[metadata]
name = blablacloud lib
version = 0.1
summary = libraries for next cloud talk
description-file =
    README.md
author = David Loiselet
license = Copyright
classifier =
    Environment :: pasouf.com
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Copyright
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3

[files]
packages =
    blablacloud

[entry_points]
console_scripts =
    blablacloud = blablacloud.client:main

[global]
setup-hooks =
    pbr.hooks.setup_hook

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[pbr]
warnerrors = True
autodoc_tree_index_modules = True
